@@ -139,6 +139,7 @@
     backlink: '>>%id',
     favicon: 'ferongr',
     hotkeys: {
+      openOptions: 'ctrl+o',
       close: 'Esc',
       spoiler: 'ctrl+s',
       openQR: 'i',
@@ -893,8 +894,11 @@
       if (!(key = keybinds.keyCode(e))) return;
       thread = nav.getThread();
       switch (key) {
+        case conf.openOptions:
+          if (!$.id('overlay')) options.dialog();
+          break;
         case conf.close:
-          if (o = $('#overlay')) {
+          if (o = $.id('overlay')) {
             $.rm(o);
           } else if (qr.el) {
             qr.close();
@@ -1305,6 +1309,7 @@
     <div class=error><code>Keybinds</code> are disabled.</div>\
     <table><tbody>\
       <tr><th>Actions</th><th>Keybinds</th></tr>\
+      <tr><td>Open Options</td><td><input name=openOptions></td></tr>\
       <tr><td>Close Options or QR</td><td><input name=close></td></tr>\
       <tr><td>Quick spoiler</td><td><input name=spoiler></td></tr>\
       <tr><td>Open QR with post number inserted</td><td><input name=openQR></td></tr>\
